# Dydyscord

./: README.md
client/: Cargo.toml  jwt-example  jwt-example-juju
client/src/: api.rs  app.rs  auth.rs  constants.rs  crypto.rs  error.rs  main.rs  mls.rs  opaque.rs  session.rs  storage.rs  transport.rs  tui.rs  ui.rs  user.rs
client/src/api/: mod.rs
client/src/app/: nav.rs  state.rs
client/src/auth/: error.rs  opaque.rs  session.rs
client/src/config/: constant.rs
client/src/core/: auth.rs  groups.rs
client/src/mls/: crypto.rs  error.rs  example.test.rs  identity.rs  mod.rs  provider.rs  storage.rs  test.rs
client/src/opaque/: auth.rs  mod.rs  models.rs
client/src/storage/: codec.rs  crypto.rs  database.rs  error.rs  tests.rs
client/src/temp/app/: nav.rs  state.rs
client/src/temp/app/ui/: cli.rs  tui.rs
client/src/temp/app/ui/cli/: choice.rs  error.rs
client/src/temp/app/ui/tui/: chat.rs  draw.rs  driver.rs
client/src/transport/: api.rs  error.rs  http.rs  ws.rs
client/src/tui/: chat.rs  driver.rs
client/src/ui/: app.rs  chat.rs  choice.rs  draw.rs  driver.rs  error.rs  flows.rs  form.rs  prompt.rs  view.rs
client/src/ui/chat/: draw.rs  driver.rs  view.rs
client/src/ui/cli/: mod.rs  prompt.rs
client/src/ui/form/: draw.rs  driver.rs  view.rs
client/src/ui/info/: draw.rs  driver.rs  view.rs
client/src/ui/menu/: draw.rs  driver.rs  view.rs
client/src/ui/tui/: chat.rs  draw.rs
client/src/ui/view/: form.rs  info.rs  menu.rs
common/: Cargo.toml
common/src/: lib.rs
server/: .env.example  Cargo.toml  docker-compose.yml
server/database/: create_db.sql  script.sql
server/src/: api.rs  config.rs  constants.rs  handler.rs  handlers.rs  main.rs  models.rs  opaque.rs
server/src/api/: auth.rs  device.rs  jwt.rs
server/src/config/: constant.rs  server.rs
server/src/database/: model.rs  models.rs
server/src/handler/: auth.rs  jwt.rs  mls.rs  root.rs  ws.rs
server/src/handler/auth/: device.rs  jwt.rs  opaque.rs
server/src/handlers/: api_error.rs  auth.rs  mod.rs  users.rs
server/src/opaque/: mod.rs  models.rs
