[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
inquire = "0.9.2"
inquire-derive = "0.9.0"
opaque-ke = {version = "4.0.1", features = ["argon2"]}
openmls = "0.7.1"
openmls_basic_credential = "0.4.1"
openmls_rust_crypto = "0.4.1"
rand = "0.8.5"
sha2 = "0.10.9"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
uuid = { version = "1.20.0", features = ["v4"] }
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
