[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
inquire = "0.9.2"
inquire-derive = "0.9.0"
reqwest = { version = "0.13.1", features = ["blocking", "cookies", "json"] }
opaque-ke = { version = "4.0.1", features = ["argon2"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
openmls = "0.7.2"
openmls_traits = "0.4.1"
openmls_rust_crypto = "0.4.2"
openmls_sqlite_storage = "0.1.1"
openmls_basic_credential = "0.4.1"
rand = "0.8.5"
sha2 = "0.10.9"
hkdf = "0.12.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
thiserror = "2.0.18"
ciborium = "0.2.2"
rusqlite = { version = "0.32.1", features = [
    "bundled-sqlcipher-vendored-openssl",
] }
keyring = { version = "3.6.3", features = ["linux-native"] }
secrecy = "0.10.3"
once_cell = "1.21.3"
