[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8"}
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
dotenv = "0.15"
opaque-ke = "4.0.1"
rand = "0.8.5"
sha2 = "0.10.9"
base64 = "0.22.1"
hex = "0.4.3"
hmac = "0.12.1"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
