[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }

axum = { version = "0.8.8" }
axum-extra = { version = "0.12.5", features = ["cookie"] }

tokio = { version = "1.49.0", features = ["full"] }

tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

dotenv = "0.15"

chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }

redis = { version = "1.0.3", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }

base64 = "0.22.1"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
opaque-ke = { version = "4.0.1", features = ["argon2"] }
rand = "0.8.5"
secrecy = "0.10.3"
sha2 = "0.10.9"

openmls = "0.7.2"
openmls_rust_crypto = "0.4.2"
openmls_traits = "0.4.1"
